change after Ian's comments

--- a/education/BSc.html
+++ b/education/BSc.html
@@ -66,7 +66,7 @@
             </div>
 
             <p>
-                Universiti Tenaga Nasional (UNITEN), or The Energy University in English, is a private educational institution in Malaysia with engineering studies as its core programs. Engineering program at UNITEN are accredited by Malaysian Qualifications Agency (MQA) and Engineering Accreditation Council Malaysia (EAC), and even recogzied internationally via the <a href="https://www.ieagreements.org/accords/washington/">Washington Accord</a>.
+                Universiti Tenaga Nasional (UNITEN), or The Energy University in English, is a private educational institution in Malaysia with engineering studies as its core programs. Engineering programs at UNITEN are accredited by Malaysian Qualifications Agency (MQA) and Engineering Accreditation Council Malaysia (EAC), and even recognized internationally via the <a href="https://www.ieagreements.org/accords/washington/">Washington Accord</a>.
             </p>
             <p>
                 The mechanical engineering program of UNITEN offers honour degrees, i.e. students enrolling into this program are required to submit an independent thesis work. There is also a mandatory industrial training attachment and capstone group project. This program also offers a strong balance between theories and experiments, with 6 different labs on 4 different mechanical engineering disciplines.      
@@ -421,10 +421,10 @@
             </h3>
             <hr>
              <p>
-                The best experience of my UNITEN life was definitely my extra-curricular activities involvement. I was holding multiple leadership responsibilities while progressing towards the 180 academic credits listed above. At the end, every effort was worth spending as I was awarded as the best graduate in extra-curricular activities involvement. 
+                The best experience of my UNITEN life was definitely my extra-curricular activity involvement. I held multiple leadership responsibilities while progressing towards the 180 academic credits listed above. At the end, all the effort was worth spending as I was awarded as the best graduate in extra-curricular activity involvement. 
              </p>
              <p>
-                UNITEN has a system to record student activity involvement, which is called Student Activity Online Reporting System of UNITEN (SCORUN). For each activity involvement, leadership responsibility, and non-academic award, students will be given certain points in this system. Student Affairs Centre of UNITEN recommendeds students to accumulate at least 100 SCORUN points before graduation. I managed to accumulate 226 in this system, and therefore was awarded as the best graduate in extra-curricular involvement. More details of my non-academic activities can be found on my page of <a href = 'volunteer.html'>Community Involvement</a>.
+                UNITEN has a system to record student activity involvement, which is called Student Activity Online Reporting System of UNITEN (SCORUN). For each activity involvement, leadership responsibility, and non-academic award, students will be given certain points in this system. Student Affairs Centre of UNITEN recommended students to accumulate at least 100 SCORUN points before graduation. I managed to accumulate 226 in this system, and therefore was awarded as the best graduate in extra-curricular involvement. More details of my non-academic activities can also be found on my page of <a href = 'volunteer.html'>Community Involvement</a>.
             </p>
 
             <div class="container">
