--- a/education/award.html
+++ b/education/award.html
@@ -42,7 +42,7 @@
             <hr>
 
             <p>
-                My academic-related awards are documented as below. Please click the "Access" link at the most right column to read the certificate.
+                My academic-related awards are documented as below. Please click the "Access" link at the right-most column to read the certificate.
                 If the awards are offered via letters instead of certificates, they are not accessible here to respect the confidentiality of such letters.    
                 <table class="TFtable">
                     <tr>
