--- a/education/engineering.html
+++ b/education/engineering.html
@@ -52,7 +52,7 @@
                     <li>single-parent or low-income family</li>
                     <li>refugees</li>
                 </ul>
-                If you identify yourself as any of these groups and currently considering to pursue engineering studies, please feel free to contact me if you need a consulation, which can include but not limited to engineering program structure, admission requirements, student life, career prospect etc.   
+                If you identify yourself as any of these groups and currently considering to pursue engineering studies, please feel free to contact me if you need a consultation, which can include, but is not limited to, engineering program structure, admission requirements, student life, career prospect, etc.   
             </div>
 
             <h3>
@@ -121,7 +121,7 @@
                 </ul>
             </p>
             <p>
-                The programs in these three groups may be offered as a specialization option for students in the four main programs listed on the table (Civil, Mechanical, Electrical, Chemical), while some schools may separate them in a different program, so be sure to check with your school. You can see that Engineering is such a diverse program that involves many disciplines, even in other non-engineering field! If you are passionate to lead the world to a better direction, pursuing an engineering degree is probably a good start &#128512;  
+                The programs in these three groups may be offered as a specialization option for students in the four main programs listed in the table (Civil, Mechanical, Electrical, Chemical), while some schools may separate them into different programs, so be sure to check with your school. You can see that Engineering is such a diverse program that involves many disciplines, even in other non-engineering fields! If you are passionate to lead the world in a better direction, pursuing an engineering degree is probably a good start &#128512;  
             </p> 
 
             <h3>
@@ -129,7 +129,7 @@
             </h3> 
             <hr>
             <p>
-                Whichever program you choose, you can expect to study a series of general engineering subjects in your first year. This means every engineering student, regardless of their programs of choice, would take the same courses in the first year. These courses include but not limited to:
+                Whichever program you choose, you can expect to study a series of general engineering subjects in your first year. This means every engineering student, regardless of their program of choice, would take the same courses in the first year. These courses include but are not limited to:
             </p>    
 
             <div class="container" style="text-align: left;">
@@ -145,18 +145,18 @@
                 <div class="col-md">
                 <div class="collapse" id="collapseExample1">
                     <div class="card card-body">
-                    As an engineering student, you can expect to learn a lot of calculus for 3 to 4 terms because it is a mathematical subject closely related to engineering applications. There are two major components in Calculus:
+                    As an engineering student, you can expect to learn a lot of calculus for 3 to 4 terms because it is a mathematical subject often used in engineering applications. There are two major components in Calculus:
                     <br><br>
                     <u>Differentiation:</u>
-                    When it comes to engineering analysis, engineers are often interested in rate of change. We need to differentiate how does a parameter change with respect to one or more other parameters. For example:
+                    When it comes to engineering analysis, engineers are often interested in rates of change. We need to differentiate how a parameter changes with respect to one or more other parameters. For example:
                     <ul>
-                        <li>If a car is moving, how fast the speed is changing with time? That would determine the acceleration of the car.</li>
+                        <li>If a car is moving, how fast is the speed changing with time? This would determine the acceleration of the car.</li>
                         <li>If water is flowing in a pipe, how does the temperature of the water change across the pipe?</li>
                     </ul>
                     <u>Integration:</u>
                     Integration is the reverse of differentiation where you accumulate a parameter at every single data point with respect to another parameter and yield the total.                    <ul>
-                        <li>If you know the speed of a car at every distance data point, you can integrate its speed and obtain total distance travelled of the car.</li>
-                        <li>In your car engine's cylinder, if you know the air pressure at every single volume data point, you can integrate the pressure to obtain the total work done of your engine.</li>
+                        <li>If you know the speed of a car at every distance data point, you can integrate its speed and obtain total distance travelled by the car.</li>
+                        <li>In your car engine's cylinder, if you know the air pressure at every single volume data point, you can integrate the pressure to obtain the total work done by your engine.</li>
                     </ul>  
                     <!-- I personally observe many first year engineering students find the calculus is too difficult and that could be a reason for the high drop out rate in some engineering schools. 
                     We actually have to recognize that Calculus often uses arbitrary parameters like x, y, z, and therefore you may not able to appreciate engineering quickly. 
@@ -181,14 +181,14 @@
                 <div class="col-md">
                 <div class="collapse" id="collapseExample2">
                     <div class="card card-body">
-                    Besides Calculus, there are some Mathematics subjects which are common in many engineering programs such as:  
+                    Besides calculus, there are some mathematics subjects which are common in many engineering programs such as:  
                     <ul>
-                        <li>Differential Equations: Techniques to solve equations which involves a function with one or more devivatives</li>
+                        <li>Differential Equations: Techniques to solve equations which involves a function with one or more devrivatives</li>
                         <li>Linear Algebra: Theories of linear equations in a more complex context that often involve vectors and matrices</li>
-                        <li>Statistics: Organization, analysis, interpretation of large set of data and often includes the study of probability</li>
-                        <li>Numerical Methods: Used to to find numerical estimation to the solutions of ordinary differential equations</li>
+                        <li>Statistics: Organization, analysis, and interpretation of large sets of data. This often includes the study of probability</li>
+                        <li>Numerical Methods: Used to find numerical estimation to the solutions of ordinary differential equations</li>
                     </ul> 
-                    These mathematical subjects may vary with different institutions. Some institutions may combine two or three subjects listed above into one single mathematical course which will be taught in multiple terms. The course name may be different, but you can expect the content of studies will be similar especially for those engineering programs that are accredited internationally.     
+                    These mathematical subjects may vary with different institutions. Some institutions may combine two or three subjects listed above into one single mathematical course which will be taught in multiple terms. The course name may be different, but you can expect the content to be similar, especially for those engineering programs that are accredited internationally.     
                     </div>
                 </div>
                 </div>      
@@ -208,7 +208,7 @@
                 <div class="col-md">
                 <div class="collapse" id="collapseExample3">
                     <div class="card card-body">
-                    At the beginning of your engineering studies, it is common to learn some general science subjects like chemistry or physics which you already have some basic exposure in your high school. Of course, when entering universities, these subjects would be learned in a much deeper manner. Some schools require students to take these general science subjects as mandatory courses while some schools may offer them as electives. There are also some schools that may require their students to study physics that are more related to their programs, e.g. Physics of Electricity and Magnetism for electrical engineering students.    
+                    At the beginning of your engineering studies, it is common to learn some general science subjects like chemistry or physics which you already have some basic exposure to in your high school. Of course, when entering universities, these subjects would be learned in a much deeper manner. Some schools require students to take these general science subjects as mandatory courses while some schools may offer them as electives. There are also some schools that may require their students to study physics that are more related to their programs, e.g. Physics of Electricity and Magnetism for electrical engineering students.    
                     </div>
                 </div>
                 </div>      
@@ -228,20 +228,20 @@
                 <div class="col-md">
                 <div class="collapse" id="collapseExample4">
                     <div class="card card-body">
-                    Engineering Mechanics is a subject area closely related to Civil and Mechanical Engineering. The concepts of statics are introduced, i.e. a series of mechanics that involves the analysis of forces and moments in order to achieve static-equilibrium state. This is an important concept in engineering to ensure structural safety. Some schools also offer dynamics, an opposite concept of statics with a strong focus on motion, as a general first year subject. If you like these subjects, chances are you would appreciate Civil or Mechanical Engineering. 
+                    Engineering Mechanics is a subject area closely related to Civil and Mechanical Engineering. The concepts of statics are introduced, i.e. a series of mechanics that involves the analysis of forces and moments in order to achieve a static-equilibrium state. This is an important concept in engineering to ensure structural safety. Some schools also offer dynamics, an opposite concept of statics with a strong focus on motion, as a general first year subject. If you like these subjects, chances are you would appreciate Civil or Mechanical Engineering. 
                     <br><br>
-                    However, why these subjects are usually offered as first year common engineering subjects where they are also required to be taken by Electrical or Chemical Engineering students? Well, it is also common for Mechanical Engineering students to take some basic Electrical Engineering courses like circuit analysis. Engineering studies often involve lots of interdisciplinary areas. When it comes to an engineering project, often we are dealing with many other engineers from other disciplines. In order to communicate effectively with as many people as possible in engineering context, it is recommended to learn some basic subjects outside of our fields as well. 
+                    However, why are these subjects usually offered as first year common engineering subjects for all disciplines including Electrical or Chemical Engineering? Well, it is also common for Mechanical Engineering students to take some basic Electrical Engineering courses like circuit analysis. Engineering studies often involve lots of interdisciplinary areas. When it comes to an engineering project, often we are dealing with many other engineers from other disciplines. In order to communicate effectively with as many people as possible in engineering context, it is recommended to learn some basic subjects outside of our fields as well. 
                     </div>
                 </div>
                 </div>      
                 </div>
             </div>
             <p>
-                I personally appreciate these first year general engineering courses because it allows students to take some time to explore their interests. Since everyone is studying the same courses, you get to explore a little bit on many general topics and then determine your passion. I personally take physics in three different areas (mechanics, electricity, modern physics) and finally found out Mechanical Engineering suits me the most.
+                I personally appreciate these first-year general engineering courses because it allows students to take some time to explore their interests. Since everyone is studying the same courses, you get to explore a little bit on many general topics and then determine your passion. I personally took physics in three different areas (mechanics, electricity, modern physics) and finally found out Mechanical Engineering suits me the most.
             </p>
             <p>
                 Many schools allow their students to choose their programs at the end of their first year,
-                so take the full advantage of this first year to decide what suits you the most. Please note that some programs may be competitive and often offered with certain quota. Therefore, it is common for schools to enroll students into their preferred choices of program based on their first year academic performance.    
+                so take full advantage of this first year to decide what suits you the most. Please note that some programs may be competitive and often offered with certain quota. Therefore, it is common for schools to enroll students into their preferred choices of program based on their first-year academic performance.    
             </p>
 
             <h3>
@@ -249,25 +249,25 @@
             </h3> 
             <hr>
             <p>
-                Choosing a university program is an important life decision. Even when one has decided to pursue an engineering degree, there are also next step to determine which engineering program to pursue. Moreover, within an engineering program, there are still many areas in which you can choose to specialize. These decisions could be tough, but doubts and uncertainties can often be reduced with proper consultation and detailed self-examination. Below are some factors that could be your reference in deciding if pursuing an engineering degree is a suitable option for you.  
+                Choosing a university program is an important life decision. Even when one has decided to pursue an engineering degree, there is also the next step of determining which engineering program to pursue. Moreover, within an engineering program, there are still many areas in which you can choose to specialize. These decisions can be tough, but doubts and uncertainties can often be reduced with proper consultation and detailed self-examination. Below are some factors that could be your reference in deciding if pursuing an engineering degree is a suitable option for you.  
             </p>
 
             <h6>Interests:</h6>
             <p style="margin-top: 5px;">
-                Every path that you choose in your life would likely come with challenges. However, challenges can often be faced in a positive attitude if you are motivated and driven by your passion and interests. Engineers solve the real daily life challenges faced by today's society, so Engineering studies often involve a lot of design problems which require creative thinking and complex mathematical analysis. Some questions you could refelct on are:
+                Every path that you choose in your life will likely come with challenges. However, challenges can often be faced in a positive attitude if you are motivated and driven by your passion and interests. Engineers solve the real daily life challenges faced by today's society, so Engineering studies often involve a lot of design problems which require creative thinking and complex mathematical analysis. Some questions you could reflect on are:
                 <ul style="margin-left: 15px;">
                     <li>Do you enjoy mathematical calculations?</li>
-                    <li>Are you eager in finding out how things work?</li>
-                    <li>Do you have passion in finding new innovative solutions to existing problems?</li>
+                    <li>Are you eager to find out how things work?</li>
+                    <li>Are you passionate in finding new innovative solutions to existing problems?</li>
                 </ul>
             </p>
             
             <h6>Character:</h6>
             <p style="margin-top: 5px;">
-                As discussed above, engineering studies may involve some interdisciplinary studies. This means you would likely learn a few subject areas outside of your major regardless of your program of choice. It is common to have lots of team work involving a series of communications in engineering work environment, so having more knowledge in other engineering disciplines could allows you to communicate more effectively in a team. Some questions you could refelct on are:
+                As discussed above, engineering studies may involve some interdisciplinary studies. This means you would likely learn a few subject areas outside your major regardless of your program of choice. In engineering work environments, it is common to use team work to communicate with other engineers of different disciplines. Having more knowledge in other engineering disciplines could allow you to communicate more effectively in a team. Some questions you could reflect on are:
                 <ul style="margin-left: 15px;">
-                    <li>Are you someone who embrace learning something outside your major?</li>                    
-                    <li>Do you prefer to work in a setting that involves a large component of team work? Or do you prefer to work behind the scene?</li>
+                    <li>Are you someone who embraces learning something outside your major?</li>                    
+                    <li>Do you prefer to work in a setting that involves a large component of team work? Or do you prefer to work behind the scenes?</li>
                     <li>Do you like to travel and meet people (such as clients, contractors, suppliers)?</li>
                 </ul>
             </p>
