--- a/education/experimental.html
+++ b/education/experimental.html
@@ -42,7 +42,7 @@
             <hr>
 
             <p>
-            This is research of my <a href="MSc.html">M.Sc. degree</a> and it mainy focuses on bluff-body aerodyanamics. Bluff bodies are objects in non-streamlined shapes with applications in many engineering structures such as buildings, offshore structures, bridges, automobiles, etc. The research uses a simple square prism as a bluff-body, and adopted experimental approaches to investigate the effect of structural dimensions, incoming wind directions and turbulence intensity on the pressure distribution on the top surface of the prism. The experiments were conducted in a wind tunnel at the <a href="https://engineering.usask.ca/departments/mech.php#AbouttheDepartment">Department of Mechanical Engineering</a>, University of Saskatchewan.  
+            This is the research of my <a href="MSc.html">M.Sc. degree</a> and it mainy focuses on bluff-body aerodynamics. Bluff bodies are objects in non-streamlined shapes with applications in many engineering structures such as buildings, offshore structures, bridges, automobiles, etc. The research uses a simple square prism as a bluff-body and adopts experimental approaches to investigate the effects of structural dimensions, incoming wind directions and turbulence intensity on the pressure distribution on the top surface of the prism. The experiments were conducted in a wind tunnel at the <a href="https://engineering.usask.ca/departments/mech.php#AbouttheDepartment">Department of Mechanical Engineering</a>, University of Saskatchewan.  
             </p>
             
             <div class="container">
@@ -63,7 +63,7 @@
             </h3>
             <hr>
             <p>
-                The incidence angle is associated with wind directions. Play the video below to observe how the pressure contour changes with different incidence angles. The square prism in this video has aspect ratio (height / width) of 1, i.e. it is a cube. The left-hand side section shows the results in a thin boundary layer condition, while the right-hand side shows the thick boundary layer condition.
+                The incidence angle is associated with the wind direction. Play the video below to observe how the pressure contour changes with different incidence angles. The square prism in this video has an aspect ratio (height / width) of 1, i.e. it is a cube. The left-hand side section shows the results in a thin boundary layer condition, while the right-hand side shows the thick boundary layer condition.
             </p>
             <div class="container">
                 <div class="row">
@@ -90,7 +90,7 @@
             </div>
 
             <p>
-                And what if we change the angle to 45<sup>&#8728;</sup> to form a diamond shape? The change in contour pattern exhibits a different characterisitcs. Those prisms with intermediate aspect ratios of ~4 to 8 show insensitive changes in contour patterns. Play the video below to observe how the pressure contour at 45<sup>&#8728;</sup> with different aspect ratios.
+                And what if we change the angle to 45<sup>&#8728;</sup> to form a diamond shape? The change in contour pattern exhibits different characteristics. Those prisms with intermediate aspect ratios of ~4 to 8 show insensitive changes in contour patterns. Play the video below to observe how the pressure contour at 45<sup>&#8728;</sup> changes with different aspect ratios.
             </p>
             <div class="container">
                 <div class="row">
@@ -105,7 +105,7 @@
             </h3>
             <hr>
             <p>
-                With engineering knowledge, we know the drag force of bluff bodies is significantly larger than streamlined bodies due to a larger low pressure region at the downstream of bluff bodies. But if we compare between the drag force of bluff bodies, have you ever wonder what shape would result in a larger drag force? The experiment shows the drag force (expressed as <i>C<sub>D</sub></i>) of square-shaped bluff bodies is significantly larger than the circular shape. This experiment also investigate the vortex shedding frequency of different bluff bodies, a parameter which may result in flow induced vibration. The shedding frequency is expressed as Strohaul number (St), and it can be observed that the shedding frequency of the cylinder is the largest. 
+                With engineering knowledge, we know the drag force of bluff bodies is significantly larger than streamlined bodies due to a larger low pressure region at the downstream of bluff bodies. If we are comparing the drag force for different shapes of bluff bodies, have you ever wondered how does the drag force varies? The experiment shows the drag force (expressed as <i>C<sub>D</sub></i>) of square-shaped bluff bodies is significantly larger than the circular shape. This experiment also investigated the vortex shedding frequency of different bluff bodies, a parameter which may result in flow induced vibration. The shedding frequency is expressed in terms of the Strohaul number (St), and it can be observed that the shedding frequency of the cylinder is the largest. 
             </p>
 
             <div class="container">
@@ -147,10 +147,10 @@
             </h3>
             <hr>
             <p>
-                The information on the pressure field on the top surface is essential for determining the wind loading and regions of disturbed flow with unnecessary vorticities. For buildings in particular, information on the rooftop pressure distribution and regions of disturbed flow are needed to properly locate heating and air conditioning units, intake and exhaust ducts, rooftop solar panels, small wind turbines, and other equipment. Proper location of these devices, outside regions of disturbed flow and in a favorable pressure environment, is needed to maximize performance and minimize energy costs. This research enables design engineers to better understand how the building geometry and wind direction may influence the pressure distribution and the aerodynamic forces on a building or offshore structure. 
+                The information on the pressure field at the top surface is essential for determining the wind loading and regions of disturbed flow with unnecessary vorticities. For buildings in particular, information on the rooftop pressure distribution and regions of disturbed flow are needed to properly locate heating and air conditioning units, intake and exhaust ducts, rooftop solar panels, small wind turbines, and other equipment. Proper location of these devices, outside regions of disturbed flow and in a favorable pressure environment, is needed to maximize performance and minimize energy costs. This research enables design engineers to better understand how the building geometry and wind direction may influence the pressure distribution and the aerodynamic forces on a building or offshore structure. 
             </p>
             <p>
-                Another environmental benefits which could be derived from this research is the investigation of the pollutant flow. For different shapes and a wide range of structural geometries, wind directions, and wind conditions, 
+                Another environmental benefit which could be derived from this research is the investigation of the pollutant flow. For different shapes and a wide range of structural geometries, wind directions, and wind conditions, 
                 the research outcomes can also be used to predict the directions of pollutants generated at the rooftops (such as chimneys) after fluid-structure interaction, and if these harmful pollutants will reach the ground level and jeopardize public health.
             </p>
             <p> 
