--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="big-screen">
                 <div class="aside-content">
                     <div>
-                    <b>Serve my community as:</b> 
+                    <b>Serving my community as:</b> 
                         <ul class="nobull">
                             <li><span class="icon"> &#128119; </span> Engineer</li>
                             <li><span class="icon"> &#128640; </span> Researcher </li>
@@ -147,7 +147,7 @@
                     <div class="collapse" id="navbarToggleExternalContent">
                         <div class="aside-content">
                             <div>
-                                <b>Serve my community as:</b> 
+                                <b>Serving my community as:</b> 
                                 <ul class="nobull">
                                     <li><span style="font-size: 20px;"> &#128119; </span> Engineer 
                                         <span style="font-size: 20px;"> &#128640; </span> Researcher
@@ -193,7 +193,7 @@
             </h1>
             <hr>
             <p>
-                Hi there, welcome to this page. I am Cloud, a youth just like clouds in the sky, who never seem to be stagnant! In this fast changing world, I am committed to continuous learning in different areas to equip myself with new knowledge so that I could keep challenging myself to create more innovative solutions to my community. I embrace travelling to different corners of the world, connecting with various people internationally, and promoting diversity by integrating with different cultures. 
+                Hi there, welcome to this page. I am Cloud, a youth just like clouds in the sky, who never seems to be stagnant! In this fast-changing world, I am committed to continuous learning in different areas to equip myself with new knowledge so that I can keep challenging myself to create more innovative solutions to my community. I embrace travelling to different corners of the world, connecting with various people internationally, and promoting diversity by integrating with different cultures. 
             </p>
 
             <h3>
@@ -202,7 +202,7 @@
             <hr>
             
             <div class="alert alert-info" role="alert", style="margin: 15px 15px 15px 15px;">
-                I strive to utilize my engineering expertise to promote sustainable development globally. It is my responsibility, as part of the Earth's resources users, to contribute in solutions of shaping a low-carbon environment and address climate change challenges. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, counsellor, or motivator guiding more young people to discover their values and strengths, and I intend to create platforms that would utlitize their talents.
+                I strive to utilize my engineering expertise to promote sustainable development globally. It is my responsibility, as part of the Earth's resources users, to contribute towards solutions of shaping a low-carbon environment and address climate change challenges. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, and motivator, guiding more young people to discover their values and strengths, and I intend to create platforms that utlitize their talents.
             </div>
 
             <p id="explore">Explore what I have been doing to achieve my mission statement by clicking different subject areas below:</p>
