--- a/education/MSc.html
+++ b/education/MSc.html
@@ -65,10 +65,10 @@
             </div>
 
             <p>
-                University of Saskatchewan (U of S) is a part of the <a href="http://www.u15.ca/">U15 group in Canada</a> who is committed to research excellence. My main focus of this degree is research on experimental fluid mechanics, and the research was complemented by different graduate courses in fluid mechanics and thermal sciences.  
+                University of Saskatchewan (U of S) is a part of the <a href="http://www.u15.ca/">U15 group in Canada</a> who is committed to research excellence. My main focus of this degree is research on experimental fluid mechanics, and the research was complemented with knowledge gained from several graduate courses in fluid mechanics and thermal sciences.  
             </p>
             <p>
-                U of S is located in Saskatoon, the most populated city in the province of Saskatchewan - the prairie of Canada. Saskatoon is on the Treaty 6 Territory of Canada and the Homeland of the M&#233;tis. It is common for residents living in this city to pay respect to the First Nations and M&#233;tis ancestors of this place.
+                U of S is located in Saskatoon, the most populated city in the province of Saskatchewan, which is part of the Canadian prairies. Saskatoon is on the Treaty 6 Territory of Canada and the Homeland of the M&#233;tis. It is common for residents living in this city to pay respect to the First Nations and M&#233;tis ancestors of this place.
             </p>
             <div class="container">
                 <div class="row">
@@ -122,10 +122,10 @@
                 <div class="collapse" id="collapseExample1">
                     <div class="card card-body">
                     Engineering students know there are three modes of heat transfer: conduction, convection, and radiation.  
-                    This course explores more advanced concepts on these three modes. Radiation, a topic which is not commonly studied deeply in undergraduate, is discussed in this course.  Different engineering approaches used in solving engineering problems are compared and discussed, which includes analytical, experimental, and numerical methods. This course provides more exposure on numerical methods related to various steady-state and transient heat transfer problems.
+                    This course explores more advanced concepts on these three modes. Radiation, a topic which is not commonly studied deeply in undergraduate studies, is discussed in this course.  Different engineering approaches used in solving engineering problems are compared and discussed, which includes analytical, experimental, and numerical methods. This course provides more exposure on numerical methods related to various steady-state and transient heat transfer problems.
                     <br><br>
                     <b>&#10067; Quick Fact: Why do engineers learn numerical methods?</b>
-                    Well, in the real world, analytical solutions are almost not possible. While analytical solutions return exact values, the assumptions used are often ideal. Numerical solutions, on the other hand, although introduce errors, it can handle more complex cases such as geometries with irregular shapes.   
+                    Well, in the real world, analytical solutions are almost impossible. While analytical solutions return exact values, the assumptions used are often ideal. Numerical solutions on the other hand, despite introducing errors, can handle more complex cases such as geometries with irregular shapes.   
                     </div>
                 </div>
             </div>      
@@ -145,10 +145,10 @@
             <div class="col-md">
                 <div class="collapse" id="collapseExample2">
                     <div class="card card-body">
-                        The kinetic theory of gases is introduced. At the undergraduate level, the thermodynamics properties (such as temperature, pressure and work) are often calculated through classical approaches (e.g. reading the chart). This course investigates these classical quantities and also some transport properties (such as viscosity, thermal conductivity and mass diffusivity) with a different approach using kinetic theory. There are also some topics in statistical thermodynamics and quantum mechanics, which I personally think is the most interesting parts of this course &#128526; 
+                        The kinetic theory of gases is introduced. At the undergraduate level, the thermodynamics properties (such as temperature, pressure and work) are often calculated through classical approaches (e.g. reading the chart). This course investigates these classical quantities and also some transport properties (such as viscosity, thermal conductivity and mass diffusivity) with a different approach using kinetic theory. There are also some topics in statistical thermodynamics and quantum mechanics, which I personally think are the most interesting parts of this course &#128526; 
                         <br><br>
                         <b>&#10067; Quick Fact: What is statistical thermodynamics?</b>
-                        It sounds like a combination between statistics and thermodynamics, doesn't it? In simple explanations, these studies predict the thermodynamics properties of a system based on probability. By using the concepts of probability, it can determine what is the most probable state of a system, and the properties of the system can be analyzed based on this most probable state.  
+                        It sounds like a combination of statistics and thermodynamics, doesn't it? In simple terms, these studies predict the thermodynamics properties of a system based on probability. By using the concepts of probability, it can determine what is the most probable state of a system, and the properties of the system can be analyzed based on this most probable state.  
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
                         Ever heard of streamlined-bodies (e.g. aerofoil)? Bluff-bodies are just any objects with a non-streamlined shape. This course explores different research papers related to bluff-body aerodynamics, with circular cylinder and square prisms as the most common bluff-body shapes.
                         <br><br>
                         <b>&#10067; Quick Fact: How is bluff-body research related to our daily life?</b>
-                        Almost everything around us is a bluff body. Buildings, automobile, bridges, and even our body are certainly not streamlined. Even a streamlined body can turn into a bluff body at different incidence angles. Therefore, the bluff-body aerodynamic research can be related to many other research fields like building science, bioengineering, thermal systems and even sports!
+                        Almost everything around us is a bluff body. Buildings, automobiles, bridges, and even our bodies are certainly not streamlined. Even a streamlined body can turn into a bluff body at different incidence angles. Therefore, the bluff-body aerodynamic research can be related to many other research fields like building science, bioengineering, thermal systems and even sports!
                     </div>
                 </div>
             </div>
@@ -191,10 +191,10 @@
             <div class="col-md">
                 <div class="collapse" id="collapseExample4">
                     <div class="card card-body">
-                        This course complements the course of bluff-body wakes described above, with majority of emphasis on streamlined body, such as aerofoils and wings. The effect of angle of attack on the lift and drag forces of a streamlined body is investigated. It also covers some interesting aerodynamic theories such as thin-aerofoil theory, vortex panel methods, and lifting-line theory.  
+                        This course complements the course of bluff-body wakes described above, with the majority of emphasis on streamlined body, such as aerofoils and wings. The effects of the angle of attack on the lift and drag forces of a streamlined body are investigated. The course also covers some interesting aerodynamic theories such as thin-aerofoil theory, vortex panel methods, and lifting-line theory.  
                         <br><br>
-                        <b>&#10067; Quick Fact: Are aerofoils same as wings?</b>
-                        In engineering, they are different. An aerofoil is considered as a two-dimensional body due to its sufficiently large slenderness. A pair of wings is treated as a three-dimensional body. It has a definite value of span and therefore there is a free-end effect to be considered in aerodynamic analysis. Of course, in the real world, wings are more practical due to its three-dimensional effect. However, in order to master an advanced concept, engineers often need to refer to its most fundamental concepts in advance.    
+                        <b>&#10067; Quick Fact: Are aerofoils the same as wings?</b>
+                        In engineering, they are different. An aerofoil is considered to be a two-dimensional body due to its sufficiently large slenderness. A pair of wings is treated as a three-dimensional body. It has a definite value of span and therefore there is a free-end effect to be considered in the aerodynamic analysis. Of course, in the real world, wings are more practical due to their three-dimensional effect. However, in order to master an advanced concept, engineers often need to refer to its most fundamental concepts in advance.    
                     </div>
                 </div>
             </div>
@@ -214,14 +214,14 @@
             <div class="col-md">
                 <div class="collapse" id="collapseExample5">
                     <div class="card card-body">
-                        Different methods relating to statistics that would help manage research more efficiently are introduced such as analysis of variance (ANOVA), one-way and factorial designs, planned and post-hoc comparisons. These methods are often used in social science research, but its principles can also be used in engineering studies such as in equipment calibration.
+                        Different methods relating to statistics that can help manage research more efficiently are introduced, such as the analysis of variance (ANOVA), one-way and factorial designs, and planned and post-hoc comparisons. These methods are often used in social science research, but the principles can also be used in engineering studies such as in equipment calibration.
                         <br><br>
-                        <b>&#10067; Quick Fact: Why statistical methods are often essential in social science?</b>
-                        In engineering, it is common to apply formulae to generalize a concept (e.g. Force = mass x acceleration), i.e. force would always depend on mass and acceleration of an object. But how can we generalize humans with different behaviours? Therefore, social science research requires statistical approcahes (often with a large sample size) in order to conclude the effect of a studied parameter. For example:
+                        <b>&#10067; Quick Fact: Why are statistical methods often essential in social science?</b>
+                        In engineering, it is common to apply formulae to generalize a concept (e.g. Force = mass x acceleration), i.e. force always depends on mass and acceleration of an object. But how can we generalize humans with different behaviours? Therefore, social science research requires statistical approaches (often with a large sample size) in order to conclude the effect of a studied parameter. For example:
                         <ul>
                             <li>Does language proficiency depend on age?</li>
                             <li>Does gender affect mental health problems?</li>
-                            <li>Would young students learn better if compliments are given?</li>
+                            <li>Do young students learn better if compliments are given?</li>
                         </ul>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
             </h3>
             <hr>
             <p>
-                Personally I think Saskatoon offers a perfect study environment. With relatively less populated compared to other major cities in Canada, the city offers a few benefits from shorter transit time between home and the campus to having more sense of community. Of course, the views in the prairie during the summer are also stunning, if you are someone who sometimes values a quite space &#128521;
+                Personally, I think Saskatoon offers a perfect study environment. Being relatively less populated compared to other major cities in Canada, the city offers a few benefits, from shorter transit time between home and the campus to having more sense of community. Of course, the views in the prairie during the summer are also stunning, if you are someone who sometimes values a quiet space &#128521;
             </p>
             <p>
                 Living in the prairie has helped me learn more about the First Nations, which is part of the <a href="https://teaching.usask.ca/indigenoussk/import/indigenous_peoplesof_saskatchewan.php">indigenous people</a> in Canada. Besides visiting their forest on their Treaty Day, I also had the opportunity to introduce Engineering studies to some First Nations high school students. This city is small but vibrant with many young students, including international students coming from about 130 countries.  
