revised after Ian's comment

--- a/education/engineering.html
+++ b/education/engineering.html
@@ -273,9 +273,9 @@
             </p>
             <h6>Intention:</h6>
             <p style="margin-top: 5px;">
-                Many people study Engineering because they think there will be a bright future such as earning big salary. If this is your main motivation, what would you do if engineering is relatively less blooming than you expected in the future (e.g. unexpected global oil price drop)? Are you willing to drop your engineering career and pursue another area from scratch? It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. Some questions you could refelct on are: 
+                Many people study Engineering because they think there will be a bright future such as earning a big salary. If this is your main motivation, what would you do if engineering is relatively less blooming than you expected in the future (e.g. unexpected global oil price drop)? Are you willing to drop your engineering career and pursue another area from scratch? It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. Some questions you could reflect on are: 
                 <ul style="margin-left: 15px;">
-                    <li>What is your main driver to pursue an engineering studies?</li>
+                    <li>What is your main driver to pursue engineering studies?</li>
                     <li>How can that driver motivate you even when you are facing critical challenges in your engineering studies or career?</li>
                 </ul>
             </p>
