revised after Ian's comments

--- a/professional/CS50.html
+++ b/professional/CS50.html
@@ -69,7 +69,7 @@
             <a href="https://cs50.edx.org">CS50</a> is a computer science course designed for students to understand the art of programming. Programming languages taught include C, Python, SQL, and web programming tools such as HTML, CSS, and JavaScript (there are also other tracks such as game or mobile app development). The course content is the same as the CS50 syllabus of Harvard University. 
         </p>
         <p>
-            As my goal is to challenge myself to gain knowledge outside of my major, taking this computer science course is a big step for me to progress towards my goals. The problem sets of CS50 have enhanced my logical thinking and also inspired me to relate classroom learning outcomes with real life applications.   
+            As my goal is to challenge myself to gain knowledge outside of my major, taking this computer science course is a big step for me to progress towards my goals. The problem sets of CS50 have enhanced my logical thinking and also have inspired me to relate classroom learning outcomes with real life applications.   
         </p>
         
         <h3>Image Filters</h3>
