--- a/professional/summary.html
+++ b/professional/summary.html
@@ -41,7 +41,7 @@
         </h1> 
         <hr>
         <p>
-            I appreciate any opportunities for self-development in order to increase my personal capacity and serve my community more effectively. Since my mission statement is about creating an inclusive environment and integrating people, I aim to extend my boundary to enhance my knowledge in different areas. This would allow me to connect with more people of different expertise especially in a professional team work or event management setting. After all, learning is also a continous process in life considering we are living in a fast evolving world. Below are the summary of my skills in several areas obtained through my on-going professional development journey.  
+            I appreciate any opportunities for self-development in order to increase my personal capacity and serve my community more effectively. Since my mission statement is about creating an inclusive environment and integrating people, I aim to extend my boundaries to enhance my knowledge in different areas. This would allow me to connect with more people of different expertise, especially in professional team work or event management settings. After all, learning is also a continuous process in life considering we are living in a fast-evolving world. Below is a summary of my skills in several areas obtained through my on-going professional development journey.  
         </p>
     
         <h3>
